[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Cristian Spinetta <cebs91@gmail.com>"]

[dependencies]
hyper = "0.11.0"
hyper-tls = "0.1.0"
rand = "0.3.15"
tokio-core = "0.1.8"
futures = "0.1.14"
net2 = "0.2.29"
num_cpus = "1.5.1"
reader-writer = "0.0.2"

log = "0.3.8"
pretty_env_logger = "0.1.1"
