[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Cristian Spinetta <cebs91@gmail.com>"]

[dependencies]
rand = "0.3.15"
net2 = "0.2.29"
reader-writer = "0.0.2"

num_cpus = "1.5.1"

hyper = "0.11"
hyper-tls = "0.1"
tokio-core = "0.1"
futures = "0.1"
futures-cpupool = "0.1"

log = "0.3.8"
pretty_env_logger = "0.1.1"
